--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "flexboxgrid": "^6.3.1",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "postcss-import": "^12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
