--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "flexboxgrid": "^6.3.1",
     "normalize.css": "^8.0.1",
-    "postcss-import": "^12.0.1"
+    "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -40,10 +40,10 @@
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "postcss": "^7.0.27",
+    "postcss-import": "^12.0.1",
     "postcss-modules": "^1.5.0",
     "prettier": "^2.0.1",
     "pretty-quick": "^2.0.1",
-    "sass": "^1.26.3",
-    "tailwindcss": "^1.2.0"
+    "sass": "^1.26.3"
   }
 }
