--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "flexboxgrid": "^6.3.1",
     "normalize.css": "^8.0.1",
+    "smooth-scroll": "^16.1.3",
     "swiper": "^5.3.7",
     "tailwindcss": "^1.2.0"
   },
