--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@storybook/addon-viewport": "^5.3.18",
     "@storybook/html": "^5.3.18",
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.7.6",
@@ -47,6 +48,7 @@
     "postcss-modules": "^1.5.0",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "storybook-mobile": "^0.1.16"
   }
 }
