--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "a boilerplate with parcel and storybook",
   "scripts": {
+    "parcel": "parcel serve",
     "deploy": "yarn build && gh-pages -d dist",
     "build": "rm -rf dist && parcel build src/*.html --public-url ./ --no-minify",
     "build:en": "rm -rf dist && parcel build ./src/*.html --public-url https://api.greenpeace.org.hk/2020/registration/ --no-minify",
