--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "parcel": "parcel serve",
     "deploy": "yarn build && gh-pages -d dist",
     "build": "rm -rf dist && parcel build src/*.html --public-url ./ --no-minify",
-    "build:en": "rm -rf dist && parcel build ./src/*.html --public-url https://api.greenpeace.org.hk/2020/registration/ --no-minify",
+    "build:en": "rm -rf dist && parcel build ./src/*.html --public-url https://api.greenpeace.org.hk/2020/cooking/ --no-minify",
     "clean": "rm -rf dist",
     "start": "parcel serve src/index.html",
     "format": "prettier --write 'src/**/*.{md,js,css,json}'",
