--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "a boilerplate with parcel and storybook",
   "scripts": {
+    "start": "parcel serve src/index.html",
     "parcel": "parcel serve",
     "deploy": "yarn build && gh-pages -d dist",
-    "build": "rm -rf dist && parcel build src/*.html --public-url ./ --no-minify",
-    "build:en": "rm -rf dist && parcel build ./src/*.html --public-url https://api.greenpeace.org.hk/2020/cooking/ --no-minify",
+    "build": "yarn clean && parcel build src/*.html --public-url ./ --no-minify",
+    "build:en": "yarn clean && parcel build ./src/*.html --public-url https://api.greenpeace.org.hk/2020/cooking/ --no-minify",
     "clean": "rm -rf dist",
-    "start": "parcel serve src/index.html",
-    "format": "prettier --write 'src/**/*.{md,js,css,json}'",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
