--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "flexboxgrid": "^6.3.1",
     "jquery": "^3.5.0",
     "normalize.css": "^8.0.1",
+    "polyfill": "^0.1.0",
+    "remove-focus-outline": "^1.2.1",
     "smooth-scroll": "^16.1.3",
-    "swiper": "^5.3.7",
-    "tailwindcss": "^1.2.0"
+    "swiper": "^5.3.8",
+    "tailwindcss": "^1.2.0",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
